--- a/clusters/dev/secrets-sync.yaml
+++ b/clusters/dev/secrets-sync.yaml
@@ -14,7 +14,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: secrets-kustzn
+  name: sops-age-kustzn
   namespace: flux-system
 spec:
   decryption:
@@ -22,7 +22,7 @@ spec:
     secretRef:
       name: sops-age
   interval: 30m0s
-  path: ./secrets/dev
+  path: ./dev/sops-age
   prune: true
   sourceRef:
     kind: GitRepository
