--- a/clusters/dev/tekton-sync.yaml
+++ b/clusters/dev/tekton-sync.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: pipelines-repo
+  name: tekton-repo
   namespace: flux-system
 spec:
   interval: 1m0s
@@ -9,20 +9,20 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: https://github.com/biya-bi/rainbow-infra-pipelines.git
+  url: https://github.com/biya-bi/rainbow-infra-tekton.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tekton-setup-kustzn
+  name: tekton-install-kustzn
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./tekton/setup
+  path: ./install
   prune: true
   sourceRef:
     kind: GitRepository
-    name: pipelines-repo
+    name: tekton-repo
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -31,8 +31,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./tekton/cicd
+  path: ./cicd
   prune: true
   sourceRef:
     kind: GitRepository
-    name: pipelines-repo
+    name: tekton-repo
