--- a/clusters/dev/tekton.yaml
+++ b/clusters/dev/tekton.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: tekton-repo
+  name: rainbow-infra-tekton
   namespace: flux-system
 spec:
   interval: 1m0s
@@ -14,7 +14,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tekton-install-kustzn
+  name: tekton-install
   namespace: flux-system
 spec:
   interval: 10m0s
@@ -22,12 +22,12 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: tekton-repo
+    name: rainbow-infra-tekton
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tekton-cicd-kustzn
+  name: tekton-cicd
   namespace: flux-system
 spec:
   interval: 10m0s
@@ -35,4 +35,4 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: tekton-repo
+    name: rainbow-infra-tekton
