Update image pull secret policies

--- a/clusters/dev/policies/add-imagepullsecrets.yaml
+++ b/clusters/dev/policies/add-imagepullsecrets.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       This policy searches for images coming from the `artifactory-jcr.infra:30000` registry and, if found, will mutate the Pod to add an
-      imagePullSecret called `image-pull-config`.      
+      imagePullSecret called `docker-config`.      
 spec:
   rules:
   - name: add-imagepullsecret
@@ -24,4 +24,4 @@ spec:
           containers:
           - <(image): "artifactory-jcr.infra:30000/*"
           imagePullSecrets:
-          - name: image-pull-config
+          - name: docker-config
