--- a/clusters/dev/policies/sync-secrets.yaml
+++ b/clusters/dev/policies/sync-secrets.yaml
@@ -13,9 +13,9 @@ spec:
     generate:
       apiVersion: v1
       kind: Secret
-      name: image-pull-config
+      name: docker-config
       namespace: "{{request.object.metadata.name}}"
       synchronize: true
       clone:
         namespace: infra
-        name: image-pull-config
+        name: docker-config
