--- a/clusters/dev/sops-age.yaml
+++ b/clusters/dev/sops-age.yaml
@@ -15,7 +15,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: sops-age
-  namespace: flux-system
+  namespace: infra
 spec:
   decryption:
     provider: sops
@@ -27,3 +27,4 @@ spec:
   sourceRef:
     kind: GitRepository
     name: rainbow-infra-secrets
+    namespace: flux-system
