--- a/clusters/dev/tekton.yaml
+++ b/clusters/dev/tekton.yaml
@@ -2,20 +2,20 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: rainbow-infra-tekton
-  namespace: flux-system
+  namespace: infra
 spec:
   interval: 1m0s
   ref:
     branch: main
   secretRef:
-    name: flux-system
-  url: https://github.com/biya-bi/rainbow-infra-tekton.git
+    name: ssh-credentials
+  url: ssh://github.com/biya-bi/rainbow-infra-tekton.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: tekton-install
-  namespace: flux-system
+  namespace: infra
 spec:
   interval: 10m0s
   path: ./install
@@ -28,7 +28,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: tekton-cicd
-  namespace: flux-system
+  namespace: infra
 spec:
   interval: 10m0s
   path: ./cicd
