--- a/clusters/dev/artifactory.yaml
+++ b/clusters/dev/artifactory.yaml
@@ -19,13 +19,13 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: artifactory-postgres
+  name: postgres
   namespace: infra
 spec:
   interval: 10m
   chart:
     spec:
-      chart: ./charts/artifactory-postgres
+      chart: ./charts/postgres
       sourceRef:
         kind: GitRepository
         name: rainbow-infra-helm
