--- a/common/environments/prod/git-repositories/helm.yaml
+++ b/common/environments/prod/git-repositories/helm.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 1m
   url: ssh://github.com/biya-bi/rainbow-infra-helm.git
   ref:
-    branch: main
+    branch: main # In production clusters, the source-controller should clone the main branch
   secretRef:
     name: ssh-credentials
   ignore: |
