Make ostock git repo a common resource

--- a/common/environments/prod/git-repositories/ostock.yaml
+++ b/common/environments/prod/git-repositories/ostock.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: main
+    branch: main # In production clusters, the source-controller should clone the main branch
   secretRef:
     name: ssh-credentials
   url: ssh://github.com/biya-bi/ostock-infra.git
