Make ostock kustomization common

--- a/common/environments/prod/kustomizations/ostock.yaml
+++ b/common/environments/prod/kustomizations/ostock.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: infra
 spec:
   interval: 10m0s
-  path: ./dev
+  path: ./prod/sops-age # The prod directory should be used for production clusters
   prune: true
   sourceRef:
     kind: GitRepository
