Make tekton-cicd depend on tekton-install

--- a/common/clusters/kustomizations/tekton-cicd.yaml
+++ b/common/clusters/kustomizations/tekton-cicd.yaml
@@ -4,6 +4,8 @@ metadata:
   name: tekton-cicd
   namespace: infra
 spec:
+  dependsOn:
+    - name: tekton-install
   interval: 10m0s
   path: ./cicd
   prune: true
