--- a/bootstrap/dev/dev.yaml
+++ b/bootstrap/dev/dev.yaml
@@ -2,11 +2,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: dev
-  namespace: flux-system
+  namespace: infra
 spec:
+  dependsOn:
+    - name: clusters
   interval: 10m0s
   path: ./common/environments/dev
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
