--- a/bootstrap/dev/kyverno.yaml
+++ b/bootstrap/dev/kyverno.yaml
@@ -1,12 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: dev
-  namespace: flux-system
+  name: kyverno
+  namespace: infra
 spec:
   interval: 10m0s
-  path: ./common/environments/dev
+  path: ./bootstrap/dev/kyverno
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
