--- a/clusters/local/kustomizations/bootstrap.yaml
+++ b/clusters/local/kustomizations/bootstrap.yaml
@@ -1,12 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: clusters
-  namespace: flux-system
+  name: bootstrap
+  namespace: infra
 spec:
   interval: 10m0s
-  path: ./common/clusters
+  path: ./bootstrap/dev
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
