--- a/bootstrap/dev/dev.yaml
+++ b/bootstrap/dev/dev.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: infra
 spec:
   dependsOn:
-    - name: clusters
+    - name: base
   interval: 10m0s
   path: ./common/environments/dev
   prune: true
