--- a/bootstrap/dev/helm-releases.yaml
+++ b/bootstrap/dev/helm-releases.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kyverno
+  name: helm-releases
   namespace: infra
 spec:
   interval: 10m0s
-  path: ./bootstrap/dev/kyverno
+  path: ./bootstrap/dev/helm-releases
   prune: true
   sourceRef:
     kind: GitRepository
