--- a/bootstrap/base/env.yaml
+++ b/bootstrap/base/env.yaml
@@ -1,11 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: helm-releases
+  name: env
   namespace: infra
 spec:
+  dependsOn:
+    - name: kyverno
   interval: 10m0s
-  path: ./bootstrap/dev/helm-releases
+  path: ./common/environments/${ENVIRONMENT} # Replace ${ENVIRONMENT} in overlays
   prune: true
   sourceRef:
     kind: GitRepository
