--- a/bootstrap/base/base.yaml
+++ b/bootstrap/base/base.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: dev
+  name: base
   namespace: infra
 spec:
   dependsOn:
-    - name: base
+    - name: kyverno
   interval: 10m0s
-  path: ./common/environments/dev
+  path: ./common/base
   prune: true
   sourceRef:
     kind: GitRepository
