--- a/bootstrap/base/kyverno.yaml
+++ b/bootstrap/base/kyverno.yaml
@@ -1,13 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: base
+  name: kyverno
   namespace: infra
 spec:
-  dependsOn:
-    - name: helm-releases
   interval: 10m0s
-  path: ./common/base
+  path: ./bootstrap/base/helm-releases
   prune: true
   sourceRef:
     kind: GitRepository
