--- a/bootstrap/dev/kustomization.yaml
+++ b/bootstrap/dev/kustomization.yaml
@@ -1,9 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../namespaces/infra.yaml
-- ../namespaces/kyverno.yaml
-- ../helm-repositories/kyverno.yaml
-- helm-releases.yaml
-- base.yaml
-- dev.yaml
+- ../base
+
+patches:
+- patch: |-
+    - op: replace
+      path: /spec/path
+      value: ./common/environments/dev
+  target:
+    name: env
