--- a/bootstrap/base/env.yaml
+++ b/bootstrap/base/env.yaml
@@ -1,6 +1,22 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: base
+  namespace: infra
+spec:
+  dependsOn:
+    - name: kyverno
+  interval: 10m0s
+  path: ./common/base
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: env
   namespace: infra
 spec:
