--- a/bootstrap/base/kustomization.yaml
+++ b/bootstrap/base/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../namespaces/infra.yaml
-- ../namespaces/kyverno.yaml
-- ../helm-repositories/kyverno.yaml
-- helm-releases/kyverno.yaml
+- namespaces.yaml
 - kyverno.yaml
-- base.yaml
 - env.yaml
+
