--- a/bootstrap/base/kyverno.yaml
+++ b/bootstrap/base/kyverno.yaml
@@ -1,11 +1,62 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: kyverno
+  namespace: kyverno
+spec:
+  interval: 24h
+  url: https://kyverno.github.io/kyverno/
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: KYVERNO_RELEASE
+  namespace: kyverno
+spec:
+  interval: 10m
+  timeout: 5m
+  chart:
+    spec:
+      chart: kyverno
+      version: 3.2.*
+      sourceRef:
+        kind: HelmRepository
+        name: kyverno
+      interval: 5m
+  releaseName: kyverno
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
+  test:
+    enable: false
+  driftDetection:
+    mode: enabled
+    ignore:
+    - paths: ["/spec/replicas"]
+      target:
+        kind: Deployment
+  values:
+    replicaCount: 1
+    admissionController:
+      replicas: 1
+    backgroundController:
+      replicas: 1
+    cleanupController:
+      replicas: 1
+    reportsController:
+      replicas: 1
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kyverno
+  name: KYVERNO_KUSTOMIZATION
   namespace: infra
 spec:
   interval: 10m0s
-  path: ./bootstrap/base/helm-releases
+  path: ./bootstrap/${ENVIRONMENT} # Replace ${ENVIRONMENT} in overlays
   prune: true
   sourceRef:
     kind: GitRepository
