--- a/bootstrap/overlays/dev/kustomization.yaml
+++ b/bootstrap/overlays/dev/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../base
+- ../../base
 
 patches:
 - patch: |-
@@ -13,7 +13,7 @@ patches:
 - patch: |-
     - op: replace
       path: /spec/path
-      value: ./bootstrap/dev
+      value: ./bootstrap/overlays/dev
     - op: replace
       path: /metadata/name
       value: kyverno
