Refactor common resources

--- a/bootstrap/base/env.yaml
+++ b/bootstrap/base/env.yaml
@@ -23,7 +23,7 @@ spec:
   dependsOn:
     - name: kyverno
   interval: 10m0s
-  path: ./common/environments/${ENVIRONMENT} # Replace ${ENVIRONMENT} in overlays
+  path: ./common/overlays/${ENVIRONMENT} # Replace ${ENVIRONMENT} in overlays
   prune: true
   sourceRef:
     kind: GitRepository
