--- a/bootstrap/overlays/dev/kustomization.yaml
+++ b/bootstrap/overlays/dev/kustomization.yaml
@@ -7,7 +7,7 @@ patches:
 - patch: |-
     - op: replace
       path: /spec/path
-      value: ./common/environments/dev
+      value: ./common/overlays/dev
   target:
     name: env
 - patch: |-
