--- a/common/base/git-repositories/secrets.yaml
+++ b/common/base/git-repositories/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: develop # In development clusters, the source-controller should clone the develop branch
+    branch: develop
   secretRef:
     name: flux-system
   url: https://github.com/biya-bi/rainbow-infra-secrets.git
