--- a/common/base/git-repositories/io-utils.yaml
+++ b/common/base/git-repositories/io-utils.yaml
@@ -1,12 +1,12 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: ostock
+  name: io-utils
   namespace: infra
 spec:
   interval: 1m0s
   ref:
-    branch: main # In production clusters, the source-controller should clone the main branch
+    branch: develop
   secretRef:
     name: ssh-credentials
-  url: ssh://github.com/biya-bi/ostock-infra.git
+  url: ssh://github.com/biya-bi/rainbow-io-utils.git
