--- a/common/base/git-repositories/ostock.yaml
+++ b/common/base/git-repositories/ostock.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: develop # In development clusters, the source-controller should clone the develop branch
+    branch: develop
   secretRef:
     name: ssh-credentials
   url: ssh://github.com/biya-bi/ostock-infra.git
