--- a/common/base/kustomizations/ostock.yaml
+++ b/common/base/kustomizations/ostock.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: infra
 spec:
   interval: 10m0s
-  path: ./prod/sops-age # The prod directory should be used for production clusters
+  path: ./${ENVIRONMENT}
   prune: true
   sourceRef:
     kind: GitRepository
