--- a/bootstrap/base/kyverno.yaml
+++ b/bootstrap/base/kyverno.yaml
@@ -10,7 +10,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: KYVERNO_RELEASE
+  name: kyverno
   namespace: kyverno
 spec:
   interval: 10m
@@ -52,11 +52,11 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: KYVERNO_KUSTOMIZATION
+  name: kyverno
   namespace: infra
 spec:
   interval: 10m0s
-  path: ./bootstrap/overlays/${ENVIRONMENT} # Replace ${ENVIRONMENT} in overlays
+  path: ./bootstrap/overlays/${ENVIRONMENT}
   prune: true
   sourceRef:
     kind: GitRepository
