--- a/common/overlays/dev/kustomization.yaml
+++ b/common/overlays/dev/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../../../base/kustomizations
+- ../../base
 
 patches:
 - patch: |-
     - op: replace
       path: /spec/path
-      value: ./prod
+      value: ./dev
   target:
     group: kustomize.toolkit.fluxcd.io
     version: v1
@@ -17,7 +17,7 @@ patches:
 - patch: |-
     - op: replace
       path: /spec/path
-      value: ./prod/sops-age
+      value: ./dev/sops-age
   target:
     group: kustomize.toolkit.fluxcd.io
     version: v1
