--- a/common/overlays/local/kustomization.yaml
+++ b/common/overlays/local/kustomization.yaml
@@ -24,3 +24,10 @@ patches:
     kind: Kustomization
     name: sops-age
     namespace: infra
+- patch: |-
+    $patch: delete
+    apiVersion: networking.k8s.io/v1
+    kind: Ingress
+    metadata:
+      name: nguiland
+      namespace: infra
