--- a/common/overlays/prod/kustomization.yaml
+++ b/common/overlays/prod/kustomization.yaml
@@ -38,20 +38,11 @@ patches:
     namespace: infra
 - patch: |-
     - op: replace
-      path: /spec/rules/0/host
-      value: jcr.nguiland.org
-    - op: replace
       path: /spec/rules/1/host
       value: keycloak.nguiland.org
     - op: replace
-      path: /spec/rules/2/host
-      value: oss.nguiland.org
-    - op: replace
-      path: /spec/tls/0/hosts
-      value:
-        - jcr.nguiland.org
-        - keycloak.nguiland.org
-        - oss.nguiland.org
+      path: /spec/tls/0/hosts/1
+      value: keycloak.nguiland.org
   target:
     group: networking.k8s.io
     version: v1
