--- a/common/base/kustomization.yaml
+++ b/common/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - alerts
+- config-maps
 - git-repositories
 - helm-releases
 - helm-repositories
