--- a/common/overlays/prod/kustomization.yaml
+++ b/common/overlays/prod/kustomization.yaml
@@ -49,3 +49,12 @@ patches:
     kind: Ingress
     name: nguiland
     namespace: infra
+- patch: |-
+    - op: replace
+      path: /data/image-pull-endpoint
+      value: jcr.nguiland.org
+  target:
+    version: v1
+    kind: ConfigMap
+    name: env-settings
+    namespace: infra
