--- a/common/base/policies/add-imagepullsecrets.yaml
+++ b/common/base/policies/add-imagepullsecrets.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
-      This policy searches for images coming from the `artifactory-jcr.infra:30000` registry and, if found, will mutate the Pod to add an
+      This policy searches for images coming from the image registry and, if found, will mutate the Pod to add an
       imagePullSecret called `docker-config`.      
 spec:
   rules:
@@ -22,6 +22,6 @@ spec:
       patchStrategicMerge:
         spec:
           containers:
-          - <(image): "artifactory-jcr.infra:30000/*"
+          - <(image): ${IMAGE_PULL_ENDPOINT}
           imagePullSecrets:
           - name: docker-config
