--- a/common/base/ingresses/nguiland.yaml
+++ b/common/base/ingresses/nguiland.yaml
@@ -2,6 +2,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
   name: nguiland
   namespace: infra
 spec:
