--- a/common/overlays/prod/kustomization.yaml
+++ b/common/overlays/prod/kustomization.yaml
@@ -38,14 +38,26 @@ patches:
     namespace: infra
 - patch: |-
     - op: replace
+      path: /spec/rules/0/host
+      value: jcr.nguiland.org
+    - op: replace
       path: /spec/rules/1/host
       value: keycloak.nguiland.org
     - op: replace
-      path: /spec/tls/0/hosts/1
-      value: keycloak.nguiland.org
+      path: /spec/rules/2/host
+      value: oss.nguiland.org
     - op: replace
       path: /spec/rules/3/host
       value: ostockng.nguiland.org
+    - op: add
+      path: /spec/tls/0/hosts/-
+      value: jcr.nguiland.org
+    - op: add
+      path: /spec/tls/0/hosts/-
+      value: keycloak.nguiland.org
+    - op: add
+      path: /spec/tls/0/hosts/-
+      value: oss.nguiland.org
     - op: add
       path: /spec/tls/0/hosts/-
       value: ostockng.nguiland.org
