--- a/common/overlays/prod/kustomization.yaml
+++ b/common/overlays/prod/kustomization.yaml
@@ -49,6 +49,9 @@ patches:
     - op: replace
       path: /spec/rules/3/host
       value: ostockng.nguiland.org
+    - op: replace
+      path: /spec/rules/4/host
+      value: ostockapi.nguiland.org
     - op: add
       path: /spec/tls/0/hosts/-
       value: jcr.nguiland.org
@@ -61,6 +64,9 @@ patches:
     - op: add
       path: /spec/tls/0/hosts/-
       value: ostockng.nguiland.org
+    - op: add
+      path: /spec/tls/0/hosts/-
+      value: ostockapi.nguiland.org
   target:
     group: networking.k8s.io
     version: v1
