Improve image pull endpoint placeholder

--- a/common/base/config-maps/env-settings.yaml
+++ b/common/base/config-maps/env-settings.yaml
@@ -4,4 +4,4 @@ metadata:
   name: env-settings
   namespace: infra
 data:
-  image-pull-endpoint: ${ENVIRONMENT}
+  image-pull-endpoint: ${IMAGE_PULL_ENDPOINT}
