Add environment to settings

--- a/common/overlays/dev/kustomization.yaml
+++ b/common/overlays/dev/kustomization.yaml
@@ -26,6 +26,9 @@ patches:
     namespace: infra
 - patch: |-
     - op: replace
+      path: /data/environment
+      value: dev
+    - op: replace
       path: /data/image-pull-endpoint
       value: jcr.nguiland.org
   target:
