--- a/common/base/config-maps/env-settings.yaml
+++ b/common/base/config-maps/env-settings.yaml
@@ -4,4 +4,5 @@ metadata:
   name: env-settings
   namespace: infra
 data:
+  environment: ${ENVIRONMENT}
   image-pull-endpoint: ${IMAGE_PULL_ENDPOINT}
