--- a/common/base/git-repositories/secrets.yaml
+++ b/common/base/git-repositories/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: rainbow-infra-secrets
+  name: nguiland-infra-secrets
   namespace: flux-system
 spec:
   interval: 1m0s
@@ -9,4 +9,4 @@ spec:
     branch: develop
   secretRef:
     name: flux-system
-  url: https://github.com/biya-bi/rainbow-infra-secrets.git
+  url: https://github.com/biya-bi/nguiland-infra-secrets.git
