--- a/common/base/git-repositories/helm.yaml
+++ b/common/base/git-repositories/helm.yaml
@@ -1,11 +1,11 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: rainbow-infra-helm
+  name: nguiland-infra-helm
   namespace: infra
 spec:
   interval: 1m
-  url: ssh://github.com/biya-bi/rainbow-infra-helm.git
+  url: ssh://github.com/biya-bi/nguiland-infra-helm.git
   ref:
     branch: develop
   secretRef:
