--- a/common/base/helm-releases/artifactory-jcr.yaml
+++ b/common/base/helm-releases/artifactory-jcr.yaml
@@ -10,7 +10,7 @@ spec:
       chart: ./charts/artifactory-jcr
       sourceRef:
         kind: GitRepository
-        name: rainbow-infra-helm
+        name: nguiland-infra-helm
       interval: 10m
   values:
     replicaCount: 1
